Various doc fixes - Remove language from code quotes - Better table layout for navParameters - Fix dark mode table border

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -636,13 +636,13 @@ pre.prism-code {
 /* inspired by: https://css-tricks.com/responsive-data-tables/ */
 .responsiveTable {
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid #444;
     border-collapse: collapse;
 
     td,
     tr,
     th {
-        border: 1px solid black;
+        border: 1px solid #444;
         border-collapse: collapse;
         min-width: 100px;
     }
@@ -656,6 +656,16 @@ pre.prism-code {
         .tdBefore {
             display: none;
         }
+    }
+}
+
+[data-theme="dark"] .responsiveTable {
+    border-color: #666;
+
+    td,
+    tr,
+    th {
+        border-color: #666;
     }
 }
 
@@ -678,11 +688,11 @@ pre.prism-code {
         position: absolute;
         top: -9999px;
         left: -9999px;
-        border-bottom: 2px solid #333;
+        border-bottom: 2px solid #444;
     }
 
     .responsiveTable tbody tr {
-        border: 1px solid #000;
+        border: 1px solid #444;
         padding: 0.25em;
     }
 
